--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Allura';
+  src: url('./Allura-Regular.otf') format('opentype');
+}
+
 /* Base Styles */
 body {
   font-family: Arial, sans-serif;
@@ -8,7 +13,11 @@ body {
   align-items: center;
   height: 100vh;
   transition: background-color 0.3s ease, color 0.3s ease;
-  
+  overflow: hidden;
+}
+
+h1, h2, h3, h4, h5, h6, .soundboard__button{
+  font-family: 'Allura', cursive;
 }
 
 *{
@@ -17,7 +26,7 @@ body {
 
 /* BEM Block: Page */
 .page {
-  background-color: #f4f4f4;
+  background-color: fuchsia;
   color: #333;
 }
 
@@ -96,8 +105,10 @@ body {
 
 /* BEM Block: Soundboard */
 .soundboard {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   gap: 10px;
 }
 
@@ -109,8 +120,14 @@ body {
   background-size: cover;
   background-position: center;
   color: white;
+  background-color: #750080;
   font-size: 16px;
   transition: transform 0.2s;
+  border-radius: 15px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  min-width: 200px;
+  min-height: 200px;
+  font-size: 2rem;
 }
 
 .soundboard__button:hover {
@@ -119,10 +136,66 @@ body {
 
 /* Dark Mode Styles */
 .page--dark {
-  background-color: #121212;
+  background-color: #4a0055;
   color: #f4f4f4;
 }
 
 .page--dark .soundboard__button {
   border: 1px solid #555;
+}
+
+
+.background-layer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: -1;
+}
+
+.background-layer > div {
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#bg1 {
+  background-image: url('../assets/images/background/pink-flower-png--1150.png');
+  top: 0;
+  left: 0;
+  width: 100px;
+  height: 100px;
+  background-size: contain;
+}
+
+#bg2 {
+  background-image: url('../assets/images/background/Pink-Flowers-PNG-Download-Image.png');
+  top: 50px;
+  left: 50px;
+}
+
+#bg3 {
+  background-image: url('../assets/images/background/pink-rose-flower-mea.png');
+  top: 75%;
+  left: 85%;
+  width: 200px;
+  height: 200px;
+}
+
+/* Spinning Animation */
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* Apply spinning animation to elements */
+#bg1,
+#bg3 {
+  animation: spin 200s linear infinite;
 }
